; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/qlcnic/extr_qlcnic_main.c_qlcnic_free_sds_rings.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/qlcnic/extr_qlcnic_main.c_qlcnic_free_sds_rings.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qlcnic_recv_context = type { i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @qlcnic_free_sds_rings(%struct.qlcnic_recv_context* %0) #0 {
  %2 = alloca %struct.qlcnic_recv_context*, align 8
  store %struct.qlcnic_recv_context* %0, %struct.qlcnic_recv_context** %2, align 8
  %3 = load %struct.qlcnic_recv_context*, %struct.qlcnic_recv_context** %2, align 8
  %4 = getelementptr inbounds %struct.qlcnic_recv_context, %struct.qlcnic_recv_context* %3, i32 0, i32 0
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load %struct.qlcnic_recv_context*, %struct.qlcnic_recv_context** %2, align 8
  %9 = getelementptr inbounds %struct.qlcnic_recv_context, %struct.qlcnic_recv_context* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = call i32 @kfree(i32* %10)
  br label %12

12:                                               ; preds = %7, %1
  %13 = load %struct.qlcnic_recv_context*, %struct.qlcnic_recv_context** %2, align 8
  %14 = getelementptr inbounds %struct.qlcnic_recv_context, %struct.qlcnic_recv_context* %13, i32 0, i32 0
  store i32* null, i32** %14, align 8
  ret void
}

declare dso_local i32 @kfree(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
